--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,6 +37,9 @@
       <div>Learning: <span id="learning">-</span></div>
       <div>Speed: <span id="speed">1x</span></div>
       <div>Last Action: <span id="last_action">-</span></div>
+      <div>Last Loss: <span id="last_loss">-</span></div>
+      <div>Avg Loss (recent): <span id="avg_loss">-</span></div>
+      <div>Avg Episode Reward: <span id="avg_ep_reward">-</span></div>
       <div>Status: <span id="status">connecting...</span></div>
     </section>
 
